# PortSnippet

./: .gitignore  Cargo.toml  LICENSE  README.jp.md  README.md
.github/workflows/: compile.yml  test  test.yml
files/: config.json  lang.json
src/: argparser.rs  argperser.rs  debounce.rs  file.rs  lang.rs  main.rs  snippet.rs  watch.rs
src/daemon/: launch-port-snippet.plist  macos.rs  mod.rs  windows.rs
