[package]
name = "dynamic_snippet"
version = "0.1.0"
authors = ["YuigaWada <yuigawada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.98"
serde_derive = "1.0.98"
serde_json = "1.0.40"

regex = "1"

crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.3"